--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -1,4 +1,4 @@
-/* this is some magical font-importing.  
+/* this is some magical font-importing.
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  /* align-items: center; */
+  justify-content: space-between;
+  padding: 8px;
+  /* gap: 16px; */
 }
 
 .profile-image {
@@ -45,4 +50,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
 }
+
+.header-end{
+  display: flex;
+  gap: 16px;
+  margin-left: auto;
+}
+
+/*You can put two different divs to distinguish left and right parts and then put flex in that way*/
