--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,12 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.content{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
 
 img {
@@ -10,6 +17,16 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  /* text-align: center; */
+  margin-bottom: 32px;
+}
+
+.item {
+  /* display: flex; */
+  /* align-items: center;
+  flex-direction: column; */
+  /* text-align: center; */
+  max-width: 200px;
 }
 
 /* do not edit this footer */
